{X00TD,X01BD}_defconfig: Switch to Simple LMK
Signed-off-by: nerd.zenss_ <nerd.zensdev@gmail.com>

--- a/arch/arm64/configs/X00TD_defconfig
+++ b/arch/arm64/configs/X00TD_defconfig
@@ -4351,6 +4351,7 @@ CONFIG_QCOM_SCM_64=y
 CONFIG_HAVE_ARM_SMCCC=y
 # CONFIG_MSM_TZ_LOG is not set
 # CONFIG_BIF is not set
+CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_SENSORS_SSC=y
 CONFIG_SENSORS_CLASS=y
 CONFIG_INPUT_STK3321=y
