--- a/arch/arm64/configs/X01BD_defconfig
+++ b/arch/arm64/configs/X01BD_defconfig
@@ -484,7 +484,8 @@ CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
-CONFIG_ZSMALLOC=y
+# CONFIG_ZSMALLOC is not set
+CONFIG_Z3FOLD=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_VMAP_LAZY_PURGING_FACTOR=32
